# ros_erle_imu

./: CMakeLists.txt  README.md  package.xml
scripts/: MPU9250.py  imu.py  imu_backup.py  visualization.py
src/: AHRS.hpp  imu_listener.cpp  imu_talker.cpp
